# template-rust-vue

./: .eslintrc.json  .gitignore  Cargo.toml  LICENSE  README.md  deno.json  index.html  package.json  tsconfig.json  vite.config.mts
.github/workflows/: deploy-pages.yaml
src/: app.vue  lib.rs  main.ts
